--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -14,5 +14,11 @@
     "pollinations_token_label": "Ввод АПІ ключа (токена) Pollinations. \nПри использовании АПІ доступны все модели сервиса, а без АПІ только kontext и turbo.",
     "image_size_label": "Настройка разрешения сгенерированных изображений (Ширина x Высота). Рекомендуется использовать стандартные размеры, например 1280x720.",
     "nologo_label": "Если включено, программа будет пытаться генерировать изображения без водяного знака Pollinations.",
-    "enhance_prompt_label": "Автоматическое улучшение вашего текстового запроса нейросетью для получения более детализированного и качественного результата."
+    "enhance_prompt_label": "Автоматическое улучшение вашего текстового запроса нейросетью для получения более детализированного и качественного результата.",
+    "googler_aspect_ratio_label": "Выбор соотношения сторон для сгенерированных изображений (горизонтальное, вертикальное или квадратное).",
+    "googler_max_threads_label": "Количество одновременных потоков для генерации изображений. Эту настройку можно оставить по умолчанию для лучшей производительности генерации.",
+    "googler_max_video_threads_label": "Количество одновременных потоков для генерации видео-анимаций. Эту настройку можно оставить по умолчанию для лучшей производительности.",
+    "googler_video_prompt_label": "Дополнительное описание для создания анимации из картинки. Этот промпт применяется глобально на все генерации.",
+    "googler_seed_label": "Случайное число для воспроизведения идентичных результатов. Если оставить пустым, каждый раз будет новый результат. Применяется глобально на все генерации.",
+    "googler_negative_prompt_label": "То, чего не должно быть на изображении (например: искаженные руки, дефекты). Применяется глобально на все генерации."
 }
