--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -14,5 +14,11 @@
     "pollinations_token_label": "Введення АПІ ключа (токену) Pollinations. \nПри використанні АПІ доступні всі моделі сервісу, а без АПІ тільки kontext та turbo.",
     "image_size_label": "Налаштування роздільної здатності згенерованих зображень (Ширина x Висота). Рекомендується використовувати стандартні розміри, наприклад 1280x720.",
     "nologo_label": "Якщо увімкнено, програма намагатиметься генерувати зображення без водяного знака Pollinations.",
-    "enhance_prompt_label": "Автоматичне покращення вашого текстового запиту нейромережею для отримання більш деталізованого та якісного результату."
+    "enhance_prompt_label": "Автоматичне покращення вашого текстового запиту нейромережею для отримання більш деталізованого та якісного результату.",
+    "googler_aspect_ratio_label": "Вибір співвідношення сторін для згенерованих зображень (горизонтальне, вертикальне або квадратне).",
+    "googler_max_threads_label": "Кількість одночасних потоків для генерації зображень. Це налаштування можна залишити за замовчуванням для найкращої продуктивності генерації.",
+    "googler_max_video_threads_label": "Кількість одночасних потоків для генерації відео-анімацій. Це налаштування можна залишити за замовчуванням для найкращої продуктивності.",
+    "googler_video_prompt_label": "Додатковий опис для створення анімації з картинки. Цей промт застосовується глобально на всі генерації.",
+    "googler_seed_label": "Випадкове число для відтворення ідентичних результатів. Якщо залишити порожнім, кожен раз буде новий результат. Застосовується глобально на всі генерації.",
+    "googler_negative_prompt_label": "Те, чого не повинно бути на зображенні (наприклад: спотворені руки, дефекти). Застосовується глобально на всі генерації."
 }
