--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -20,5 +20,7 @@
     "googler_max_video_threads_label": "Количество одновременных потоков для генерации видео-анимаций. Эту настройку можно оставить по умолчанию для лучшей производительности.",
     "googler_video_prompt_label": "Дополнительное описание для создания анимации из картинки. Этот промпт применяется глобально на все генерации.",
     "googler_seed_label": "Случайное число для воспроизведения идентичных результатов. Если оставить пустым, каждый раз будет новый результат. Применяется глобально на все генерации.",
-    "googler_negative_prompt_label": "То, чего не должно быть на изображении (например: искаженные руки, дефекты). Применяется глобально на все генерации."
+    "googler_negative_prompt_label": "То, чего не должно быть на изображении (например: искаженные руки, дефекты). Применяется глобально на все генерации.",
+    "elevenlabs_image_aspect_ratio": "Выбор соотношения сторон для сгенерированных изображений.",
+    "elevenlabs_image_max_threads": "Количество одновременных потоков для генерации изображений. 10 потоков хватит с головой."
 }
