--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -20,5 +20,7 @@
     "googler_max_video_threads_label": "Кількість одночасних потоків для генерації відео-анімацій. Це налаштування можна залишити за замовчуванням для найкращої продуктивності.",
     "googler_video_prompt_label": "Додатковий опис для створення анімації з картинки. Цей промт застосовується глобально на всі генерації.",
     "googler_seed_label": "Випадкове число для відтворення ідентичних результатів. Якщо залишити порожнім, кожен раз буде новий результат. Застосовується глобально на всі генерації.",
-    "googler_negative_prompt_label": "Те, чого не повинно бути на зображенні (наприклад: спотворені руки, дефекти). Застосовується глобально на всі генерації."
+    "googler_negative_prompt_label": "Те, чого не повинно бути на зображенні (наприклад: спотворені руки, дефекти). Застосовується глобально на всі генерації.",
+    "elevenlabs_image_aspect_ratio": "Вибір співвідношення сторін для згенерованих зображень.",
+    "elevenlabs_image_max_threads": "Кількість одночасних потоків для генерації зображень. 10 потоків вистачить з головою."
 }
