--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -22,5 +22,6 @@
     "googler_seed_label": "Случайное число для воспроизведения идентичных результатов. Если оставить пустым, каждый раз будет новый результат. Применяется глобально на все генерации.",
     "googler_negative_prompt_label": "То, чего не должно быть на изображении (например: искаженные руки, дефекты). Применяется глобально на все генерации.",
     "elevenlabs_image_aspect_ratio": "Выбор соотношения сторон для сгенерированных изображений.",
-    "elevenlabs_image_max_threads": "Количество одновременных потоков для генерации изображений. 10 потоков хватит с головой."
+    "elevenlabs_image_max_threads": "Количество одновременных потоков для генерации изображений. 10 потоков хватит с головой.",
+    "assemblyai_max_threads": "Количество одновременных потоков для транскрибации. По умолчанию у всех лимит 5 одновременных запросов, поэтому лучше не трогать эту настройку."
 }
