--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -22,5 +22,6 @@
     "googler_seed_label": "Випадкове число для відтворення ідентичних результатів. Якщо залишити порожнім, кожен раз буде новий результат. Застосовується глобально на всі генерації.",
     "googler_negative_prompt_label": "Те, чого не повинно бути на зображенні (наприклад: спотворені руки, дефекти). Застосовується глобально на всі генерації.",
     "elevenlabs_image_aspect_ratio": "Вибір співвідношення сторін для згенерованих зображень.",
-    "elevenlabs_image_max_threads": "Кількість одночасних потоків для генерації зображень. 10 потоків вистачить з головою."
+    "elevenlabs_image_max_threads": "Кількість одночасних потоків для генерації зображень. 10 потоків вистачить з головою.",
+    "assemblyai_max_threads": "Кількість одночасних потоків для транскрибації. За замовчуванням у всіх ліміт 5 запитів одночасних, тому краще не чіпати це налаштування."
 }
