--- a/assets/translations/hints/en.json
+++ b/assets/translations/hints/en.json
@@ -22,5 +22,6 @@
     "googler_seed_label": "A random number to reproduce identical results. If left blank, a new result will be used each time. Applies globally to all generations.",
     "googler_negative_prompt_label": "What should NOT be in the image (e.g., distorted hands, defects). Applies globally to all generations.",
     "elevenlabs_image_aspect_ratio": "Selection of the aspect ratio for generated images.",
-    "elevenlabs_image_max_threads": "The number of simultaneous threads for image generation. 10 threads is more than enough."
+    "elevenlabs_image_max_threads": "The number of simultaneous threads for image generation. 10 threads is more than enough.",
+    "assemblyai_max_threads": "The number of simultaneous threads for transcription. By default, everyone has a limit of 5 concurrent requests, so it's better not to touch this setting."
 }
