--- a/assets/translations/hints/en.json
+++ b/assets/translations/hints/en.json
@@ -7,7 +7,7 @@
     "image_review_label": "Pauses the program after image generation, allowing you to review them in the gallery, delete or regenerate unsuccessful ones before video montage.",
     "prompt_count_control_label": "Prompt control allows you to control the number of prompts returned by the neural network. If, for example, your prompt is set to 50 prompts, \nbut the neural network returned 30 prompts due to an error, the program will automatically verify the count and regenerate the result if it differs from the specified number. \nIf after 3 attempts the program fails to get the desired number of prompts, the last received number of prompts will be used.",
     "max_download_threads_label": "The number of simultaneous threads for downloading content during rewriting. More threads speed up work but may load the network.",
-    "max_concurrent_requests": "The number of simultaneous requests to the neural network. It is recommended to set from 5 to 10 depending on your API key limits. Higher numbers may lead to 'Rate Limit' errors.",
+    "max_concurrent_requests": "The number of simultaneous requests to the neural network. It is recommended to set from 5 to 10 depending on your API key limits.\nHigher numbers may lead to 'Rate Limit' errors.",
     "openrouter_add_model_hint": "To add a new model, copy its full name from the OpenRouter website (e.g., 'google/gemini-2.0-flash-exp:free') and paste it into this field, then click the 'Add' button. The added model will appear in the list above.",
     "char_limit": "This is the maximum number of characters that your current Voicemaker subscription plan allows you to voice in a single request.\nIf the text is longer, the program will automatically split it into parts (chunks) according to this limit.",
     "pollinations_model_label": "Selection of the model for image generation. Different models have different styles and capabilities.",
@@ -23,5 +23,23 @@
     "googler_negative_prompt_label": "What should NOT be in the image (e.g., distorted hands, defects). Applies globally to all generations.",
     "elevenlabs_image_aspect_ratio": "Selection of the aspect ratio for generated images.",
     "elevenlabs_image_max_threads": "The number of simultaneous threads for image generation. 10 threads is more than enough.",
-    "assemblyai_max_threads": "The number of simultaneous threads for transcription. By default, everyone has a limit of 5 concurrent requests, so it's better not to touch this setting."
+    "assemblyai_max_threads": "The number of simultaneous threads for transcription. By default, everyone has a limit of 5 concurrent requests, so it's better not to touch this setting.",
+    "language_prompt_label": "This is an instruction for the neural network that defines the style, tone, and translation rules. When performing a task, the program combines your prompt with the text to be translated. \nRequest structure: {Prompt} + {Translation Text or Original}.",
+    "translation_model_label": "Choice of the AI model for translation. The list shows models added in the Settings > API > OpenRouter tab.",
+    "tokens_label": "Maximum token limit for the AI response. Controls the length of the generated text and helps avoid overspending or incomplete answers.\nIf you set a limit of 128,000 tokens, it doesn't mean the AI will always respond with a length of 128k tokens; it is a constraint that the AI cannot exceed.\nTherefore, for a complete response, it is recommended to set a limit of 128,000 tokens. It is the maximum.",
+    "temperature_label": "The model's creativity parameter. Lower values (0.1–0.5) ensure accuracy and stability,\nwhile higher values (0.8–1.5) make the text more varied but less predictable.",
+    "rewrite_prompt_label": "This is an instruction for the neural network that defines the style and rules for rewriting (paraphrasing). The program combines your prompt with the text for rewriting. \nRequest structure: {Prompt} + {Text for rewriting}.",
+    "rewrite_model_label": "Choice of the AI model for rewriting. The list shows models added in the Settings > API > OpenRouter tab.",
+    "rewrite_tokens_label": "Maximum token limit for the AI response during rewriting. Controls the text length. \nFor a complete response, it is recommended to set a limit of 128,000 tokens. It is the maximum.",
+    "rewrite_temperature_label": "The model's creativity parameter during rewriting. Lower values ensure results closer to the original, while higher values provide more free and creative paraphrasing.",
+    "default_template_label": "You can apply a template that will be automatically selected when this language is chosen for translation or rewriting. It shows templates created in the Templates tab.",
+    "tts_provider_label": "Voiceover service. To use the selected service, please ensure you have configured it in the Settings > API > Audio tab.",
+    "background_music_label": "Adding background music to the video. If the audio file is shorter than the video, the program will automatically loop it.",
+    "music_volume_label": "Allows you to adjust the background music volume so it creates ambiance without overpowering the voiceover.",
+    "elevenlabs_template_label": "Selection of a pre-configured voice template. The list includes profiles created and configured through the ElevenLabs Telegram bot.",
+    "eleven_unlim_voice_id_label": "Unique identifier (Voice ID) from the ElevenLabs library. It is recommended to use free voices. Stability and similarity parameters can be further tuned in the settings below.",
+    "voicemaker_voice_label": "Selection of a voice model from the available VoiceMaker library. Each voice features unique timbre and intonational characteristics.",
+    "edgetts_voice_label": "Selection of a system voice from the EdgeTTS service. To preview and select the most suitable option, use the official website (link provided in Settings > API > Audio > EdgeTTS).",
+    "overlay_effect_label": "Selection of visual overlay effects with transparency applied over the video to create ambiance (similar to effects in CapCut).",
+    "watermark_label": "Adding a static image (logo or icon) to a specified corner of the video. The size and position of the watermark can be adjusted below."
 }
