--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -23,5 +23,23 @@
     "googler_negative_prompt_label": "То, чего не должно быть на изображении (например: искаженные руки, дефекты). Применяется глобально на все генерации.",
     "elevenlabs_image_aspect_ratio": "Выбор соотношения сторон для сгенерированных изображений.",
     "elevenlabs_image_max_threads": "Количество одновременных потоков для генерации изображений. 10 потоков хватит с головой.",
-    "assemblyai_max_threads": "Количество одновременных потоков для транскрибации. По умолчанию у всех лимит 5 одновременных запросов, поэтому лучше не трогать эту настройку."
+    "assemblyai_max_threads": "Количество одновременных потоков для транскрибации. По умолчанию у всех лимит 5 одновременных запросов, поэтому лучше не трогать эту настройку.",
+    "language_prompt_label": "Это инструкция для нейросети, которая определяет стиль, тон и правила перевода. При выполнении задачи программа объединяет ваш промпт с текстом для перевода. \nСтруктура запроса: {Промпт} + {Текст для перевода или Оригинал}.",
+    "translation_model_label": "Выбор нейросетевой модели для перевода. В списке отображаются модели, которые вы добавили на вкладке Настройки > API > OpenRouter.",
+    "tokens_label": "Максимальный лимит токенов для ответа нейросети. Контролирует длину генерируемого текста и помогает избежать перерасхода или неполных ответов.\nЕсли вы установите лимит в 128000 токенов, это не означает, что нейросеть будет всегда отвечать длиной в 128к токенов; это ограничение, которое нейросеть не может превысить.\nПоэтому для полного ответа желательно установить лимит в 128000 токенов. Он является максимальным.",
+    "temperature_label": "Параметр творчества модели. Низкие значения (0.1–0.5) обеспечивают точность и стабильность,\nвысокие (0.8–1.5) — делают текст более разнообразным, но менее предсказуемым.",
+    "rewrite_prompt_label": "Это инструкция для нейросети, которая определяет стиль и правила рерайта (перефразирования). Программа объединяет ваш промпт с текстом для рерайта. \nСтруктура запроса: {Промпт} + {Текст для рерайта}.",
+    "rewrite_model_label": "Выбор нейросетевой модели для рерайта. В списке отображаются модели, которые вы добавили на вкладке Настройки > API > OpenRouter.",
+    "rewrite_tokens_label": "Максимальный лимит токенов для ответа нейросети при рерайте. Контролирует длину текста. \nДля полного ответа желательно установить лимит в 128000 токенов. Он является максимальным.",
+    "rewrite_temperature_label": "Параметр творчества модели при рерайте. Низкие значения обеспечивают результат, более близкий к оригиналу, высокие — более свободное и креативное перефразирование.",
+    "default_template_label": "Можно применить шаблон, который будет автоматически выбран при выборе этого языка для перевода или рерайта. Отображаются шаблоны, созданные на вкладке Шаблоны.",
+    "tts_provider_label": "Сервис озвучки текста. Перед использованием выбранного сервиса, пожалуйста, убедитесь, что вы настроили его на вкладке Настройки > API > Аудио.",
+    "background_music_label": "Наложение фоновой музыки на видео. Если музыкальный файл короче видео, программа автоматически зациклит его.",
+    "music_volume_label": "Возможность настроить уровень громкости фоновой музыки так, чтобы она не перебивала голос озвучки.",
+    "elevenlabs_template_label": "Выбор предварительно настроенного шаблона голоса. В списке доступны профили, созданные и сконфигурированные через Telegram-бот сервиса ElevenLabs.",
+    "eleven_unlim_voice_id_label": "Уникальный идентификатор (Voice ID) голоса из библиотеки ElevenLabs. Рекомендуется использовать бесплатные голоса. Параметры стабильности и сходства можно дополнительно настроить ниже.",
+    "voicemaker_voice_label": "Выбор голосовой модели из списка доступных решений сервиса VoiceMaker. Каждый голос обладает уникальными характеристиками тембра и интонации.",
+    "edgetts_voice_label": "Выбор системного голоса сервиса EdgeTTS. Для предварительного прослушивания и подбора оптимального варианта воспользуйтесь официальным сайтом (ссылка в разделе Настройки > API > Аудио > EdgeTTS).",
+    "overlay_effect_label": "Выбор визуальных эффектов с прозрачностью (Overlay), накладываемых поверх видеоряда для создания атмосферности (аналогично эффектам в CapCut).",
+    "watermark_label": "Добавление статического изображения (логотипа или иконки) в выбранный угол видео. Размер и позицию водяного знака можно настроить ниже."
 }
