--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -23,5 +23,23 @@
     "googler_negative_prompt_label": "Те, чого не повинно бути на зображенні (наприклад: спотворені руки, дефекти). Застосовується глобально на всі генерації.",
     "elevenlabs_image_aspect_ratio": "Вибір співвідношення сторін для згенерованих зображень.",
     "elevenlabs_image_max_threads": "Кількість одночасних потоків для генерації зображень. 10 потоків вистачить з головою.",
-    "assemblyai_max_threads": "Кількість одночасних потоків для транскрибації. За замовчуванням у всіх ліміт 5 запитів одночасних, тому краще не чіпати це налаштування."
+    "assemblyai_max_threads": "Кількість одночасних потоків для транскрибації. За замовчуванням у всіх ліміт 5 запитів одночасних, тому краще не чіпати це налаштування.",
+    "language_prompt_label": "Це інструкція для нейромережі, яка визначає стиль, тон та правила перекладу. При виконанні завдання програма поєднує ваш промт із текстом для перекладу. \nСтруктура запиту: {Промт} + {Текст для перекладу або Оригінал}.",
+    "translation_model_label": "Вибір нейромережевої моделі для перекладу. У списку відображаються моделі, які ви додали на вкладці Налаштування > API > OpenRouter.",
+    "tokens_label": "Максимальний ліміт токенів для відповіді нейромережі. Контролює довжину генерованого тексту та допомагає уникнути перевитрат або неповних відповідей.\nЯкщо ви встановите ліміт у 128000 токенів, то це не означае що нейромережа буде завжди відповідати довжиною у 128к токенів, це обмеження яке нейромеража не може перевищити.\nТому для повної відповіді бажано встановити ліміт в 128000 токенів. Він є максимальним.",
+    "temperature_label": "Параметр творчості моделі. Низькі значення (0.1–0.5) забезпечують точність та стабільність, високі (0.8–1.5) — роблять текст більш різноманітним, але менш передбачуваним.",
+    "rewrite_prompt_label": "Це інструкція для нейромережі, яка визначає стиль та правила рерайту (перефразування). Програма поєднує ваш промт із текстом для рерайту. \nСтруктура запиту: {Промт} + {Текст для рерайту}.",
+    "rewrite_model_label": "Вибір нейромережевої моделі для рерайту. У списку відображаються моделі, які ви додали на вкладці Налаштування > API > OpenRouter.",
+    "rewrite_tokens_label": "Максимальний ліміт токенів для відповіді нейромережі під час рерайту. Контролює довжину тексту. \nДля повної відповіді бажано встановити ліміт в 128000 токенів. Він є максимальним.",
+    "rewrite_temperature_label": "Параметр творчості моделі при рерайті. Низькі значення забезпечують ближчий до оригіналу результат, високі — більш вільне та креативне перефразування.",
+    "default_template_label": "Можна застосувати шаблон, який буде автоматично обраний при виборі цієї мови для перекладу або рерайту. Відображаються шаблони, створені на вкладці Шаблони.",
+    "tts_provider_label": "Сервіс для озвучення тексту. Щоб використовувати обраний сервіс, будь ласка, переконайтеся, що ви налаштували його на вкладці Налаштування > API > Аудіо.",
+    "background_music_label": "Накладання фонової музики на відео. Якщо аудіофайл коротший за відео, програма автоматично зациклить його.",
+    "music_volume_label": "Можливість налаштувати рівень гучності фонової музики так, щоб вона створювала атмосферу, але не перебивала голос озвучки.",
+    "elevenlabs_template_label": "Вибір попередньо налаштованого шаблону голосу. У списку доступні профілі, які ви створили та сконфігурували через Telegram-бот сервісу ElevenLabs.",
+    "eleven_unlim_voice_id_label": "Унікальний ідентифікатор (Voice ID) голосу з бібліотеки ElevenLabs. Рекомендується використовувати безкоштовні голоси.\nПараметри стабільності та схожості можна додатково налаштувати нижче.",
+    "voicemaker_voice_label": "Вибір голосової моделі зі списку доступних рішень сервісу VoiceMaker. Кожен голос має унікальні характеристики тембру та інтонації.",
+    "edgetts_voice_label": "Вибір системного голосу сервісу EdgeTTS. Для попереднього прослуховування та підбору оптимального варіанту скористайтеся офіційним сервісом\n(посилання в розділі Налаштування > API > Аудіо > EdgeTTS).",
+    "overlay_effect_label": "Вибір візуальних ефектів з прозорістю (Overlay), що накладаються поверх відеоряду для створення атмосферності (аналогічно ефектам у CapCut).",
+    "watermark_label": "Додавання статичного зображення (логотипу або іконки) у вибраний кут відео. Розмір та позицію водяного знака можна налаштувати нижче."
 }
