--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -73,9 +73,8 @@
     "montage_settings_label": "Montage Settings",
     "subtitles_settings_label": "Subtitles Settings",
     "templates_settings_label": "Templates Settings",
-    "manage_languages": "Manage Languages",
     "language_name_label": "Display Name:",
-    "language_id_label": "Language ID (e.g. uk-UK):",
+    "language_id_label": "Language ID (e.g. en):",
     "enter_links_label": "Enter YouTube Links (one per line):",
     "links_count_label": "Links count:",
     "language_prompt_label": "Prompt for this language:",
