--- a/assets/translations/hints/ru.json
+++ b/assets/translations/hints/ru.json
@@ -41,5 +41,7 @@
     "voicemaker_voice_label": "Выбор голосовой модели из списка доступных решений сервиса VoiceMaker. Каждый голос обладает уникальными характеристиками тембра и интонации.",
     "edgetts_voice_label": "Выбор системного голоса сервиса EdgeTTS. Для предварительного прослушивания и подбора оптимального варианта воспользуйтесь официальным сайтом (ссылка в разделе Настройки > API > Аудио > EdgeTTS).",
     "overlay_effect_label": "Выбор визуальных эффектов с прозрачностью (Overlay), накладываемых поверх видеоряда для создания атмосферности (аналогично эффектам в CapCut).",
-    "watermark_label": "Добавление статического изображения (логотипа или иконки) в выбранный угол видео. Размер и позицию водяного знака можно настроить ниже."
+    "watermark_label": "Добавление статического изображения (логотипа или иконки) в выбранный угол видео. Размер и позицию водяного знака можно настроить ниже.",
+    "language_name_label": "Название языка для удобства управления. Оно отображается в карточке задачи в очереди, а также используется для создания папки проекта, где будут храниться все сгенерированные данные.",
+    "language_id_label": "Критически важная настройка для корректной транскрибации, особенно при использовании движка Whisper (AMD/Fork). Укажите двухбуквенный код языка (например, uk — для украинского, en — для английского) для обеспечения точного распознавания речи."
 }
