--- a/assets/translations/hints/uk.json
+++ b/assets/translations/hints/uk.json
@@ -41,5 +41,7 @@
     "voicemaker_voice_label": "Вибір голосової моделі зі списку доступних рішень сервісу VoiceMaker. Кожен голос має унікальні характеристики тембру та інтонації.",
     "edgetts_voice_label": "Вибір системного голосу сервісу EdgeTTS. Для попереднього прослуховування та підбору оптимального варіанту скористайтеся офіційним сервісом\n(посилання в розділі Налаштування > API > Аудіо > EdgeTTS).",
     "overlay_effect_label": "Вибір візуальних ефектів з прозорістю (Overlay), що накладаються поверх відеоряду для створення атмосферності (аналогічно ефектам у CapCut).",
-    "watermark_label": "Додавання статичного зображення (логотипу або іконки) у вибраний кут відео. Розмір та позицію водяного знака можна налаштувати нижче."
+    "watermark_label": "Додавання статичного зображення (логотипу або іконки) у вибраний кут відео. Розмір та позицію водяного знака можна налаштувати нижче.",
+    "language_name_label": "Назва мови для зручності керування. Вона відображається у картці завдання в черзі, а також використовується для створення папки проекту, де зберігатимуться всі згенеровані дані.",
+    "language_id_label": "Критично важливе налаштування для коректної транскрибації, особливо при використанні рушія Whisper (AMD/Fork). Вкажіть дволітерний код мови (наприклад, uk — для української, en — для англійської) для забезпечення точного розпізнавання мовлення."
 }
