--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -265,11 +265,11 @@
     "add_audio_title": "Add Audio",
     "add_audio_desc": "Drag and drop an audio file (.mp3, .wav) here.",
     "custom_stages_label": "Custom Stages",
-    "add_stage_btn": "Add New Stage",
+    "add_stage_btn": "Add Custom Stage",
     "parallel_stage_name_label": "Stage Name:",
-    "stage_name_placeholder": "Stage Name (e.g. Summary)",
+    "stage_name_placeholder": "Enter stage name",
     "prompt_label": "Prompt:",
-    "enter_prompt_placeholder": "Enter your prompt here...",
+    "enter_prompt_placeholder": "Enter prompt...",
     "temperature_label": "Temperature:",
     "current_template_label": "Current Template",
     "confirm_save_title": "Confirm Save",
@@ -337,6 +337,7 @@
     "default_settings": "Global Settings",
     "template": "Template",
     "whisper_model_download_info": "Whisper model '{model_name}' not found. Starting one-time download. This may take some time...",
+    "image_prompt_settings_title": "Image Prompt Settings",
     "overlay_effects_group": "Overlay Effects",
     "select_effect_button": "Select Effect",
     "add_custom_effect_button": "Add Custom Effect",
