--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -266,11 +266,11 @@
     "add_audio_title": "Добавить аудио",
     "add_audio_desc": "Перетащите аудиофайл (.mp3, .wav) сюда.",
     "custom_stages_label": "Кастомные этапы",
-    "add_stage_btn": "Добавить новый этап",
+    "add_stage_btn": "Добавить кастомный этап",
     "parallel_stage_name_label": "Название этапа:",
-    "stage_name_placeholder": "Название этапа (напр. Итоги)",
-    "prompt_label": "Промпт:",
-    "enter_prompt_placeholder": "Введите ваш промпт здесь...",
+    "stage_name_placeholder": "Введите название этапа",
+    "prompt_label": "Промт:",
+    "enter_prompt_placeholder": "Введите промт...",
     "temperature_label": "Температура:",
     "current_template_label": "Текущий шаблон",
     "confirm_save_title": "Подтвердить сохранение",
@@ -342,6 +342,7 @@
     "default_settings": "Глобальные настройки",
     "template": "Шаблон",
     "whisper_model_download_info": "Модель Whisper '{model_name}' не найдена в кеше. Начинается одноразовая загрузка. Это может занять некоторое время...",
+    "image_prompt_settings_title": "Настройки промптов для изображений",
     "overlay_effects_group": "Эффекты наложения",
     "select_effect_button": "Выбрать эффект",
     "add_custom_effect_button": "Добавить свой эффект",
