--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -267,11 +267,11 @@
     "add_audio_title": "Додати аудіо",
     "add_audio_desc": "Перетягніть аудіофайл (.mp3, .wav) сюди.",
     "custom_stages_label": "Кастомні етапи",
-    "add_stage_btn": "Додати новий етап",
+    "add_stage_btn": "Додати кастомний етап",
     "parallel_stage_name_label": "Назва етапу:",
-    "stage_name_placeholder": "Назва етапу (напр. Підсумок)",
-    "prompt_label": "Промпт:",
-    "enter_prompt_placeholder": "Введіть ваш промпт тут...",
+    "stage_name_placeholder": "Введіть назву етапу",
+    "prompt_label": "Промт:",
+    "enter_prompt_placeholder": "Введіть промт...",
     "temperature_label": "Температура:",
     "current_template_label": "Поточний шаблон",
     "confirm_save_title": "Підтвердити збереження",
@@ -339,6 +339,7 @@
     "default_settings": "Глобальні налаштування",
     "template": "Шаблон",
     "whisper_model_download_info": "Модель Whisper '{model_name}' не знайдено в кеші. Починається одноразове завантаження. Це може зайняти деякий час...",
+    "image_prompt_settings_title": "Налаштування промптів для зображень",
     "overlay_effects_group": "Ефекти накладання",
     "select_effect_button": "Обрати ефект",
     "add_custom_effect_button": "Додати свій ефект",
