--- a/assets/translations/hints/en.json
+++ b/assets/translations/hints/en.json
@@ -43,5 +43,11 @@
     "overlay_effect_label": "Selection of visual overlay effects with transparency applied over the video to create ambiance (similar to effects in CapCut).",
     "watermark_label": "Adding a static image (logo or icon) to a specified corner of the video. The size and position of the watermark can be adjusted below.",
     "language_name_label": "The name of the language for your convenience. It will be displayed in the task card on the Queue tab, and a project folder with this name will be created to store all generated data.",
-    "language_id_label": "A critical setting for correct transcription, especially when using the Whisper (AMD/Fork) engine. Specify the two-letter language code (e.g., uk for Ukrainian, en for English) to ensure accurate speech recognition."
+    "language_id_label": "A critical setting for correct transcription, especially when using the Whisper (AMD/Fork) engine. Specify the two-letter language code (e.g., uk for Ukrainian, en for English) to ensure accurate speech recognition.",
+    "prompt_content_label": "General prompt for generating prompts for subsequent image generation. Request structure: {Prompt} + {Translated text or Original}.",
+    "image_model_label": "The model that will be used to create prompts. Displays models added on the API > OpenRouter tab.",
+    "prompt_count_label": "Prompt control allows you to control the number of prompts returned by the neural network. If, for example, your prompt is set to 50 prompts, and the neural network returns 30 prompts due to an error, the program will automatically check the count, and if it differs from the specified count, it will regenerate the result. If the program fails to obtain the desired number of prompts after 3 attempts, the last obtained number of prompts will be used.",
+    "custom_stages_label": "You have the ability to create your own custom stages where you can enter absolutely anything to get the information you need. Executed immediately after translation, or if the Translation stage is disabled, the original text is used. You can use this, for example, to create headlines for your text or a YouTube description for the video. Request structure: {Prompt} + {Translation or Original text}.",
+    "parallel_stage_name_label": "The name of the stage that will be displayed in the stage list when selecting a language for video creation and in the task card. A file with the result will also be created with this name in the final project folder.",
+    "custom_stage_prompt_label": "Prompt for your custom stage."
 }
